--- a/styles/css/vtex.rich-text.css
+++ b/styles/css/vtex.rich-text.css
@@ -91,6 +91,9 @@
   font-size: 13px;
 }
 
+.container--footerText{
+  color: #fff;
+}
 @media only screen and (min-width: 640px) {
   .container--question .strong {
     font-size: 40px;
