--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -65,6 +65,12 @@
   margin: 1rem 0;
 }
 
+.logoImage{
+  width: 100%;
+  max-width: 125px;
+}
+
+
 @media only screen and (min-width: 640px) {
 
   .label {
