--- a/styles/css/vtex.rich-text.css
+++ b/styles/css/vtex.rich-text.css
@@ -106,6 +106,10 @@
   color: #ff631d;
 }
 
+.container--instutitionalText{
+  padding: 0px 1.5em;
+}
+
 @media only screen and (min-width: 640px) {
   .container--question .strong {
     font-size: 40px;
