--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -71,6 +71,10 @@
   padding: 10px 0px;
 }
 
+.imageElement--certified{
+  max-width: 170px;
+}
+
 @media only screen and (min-width: 640px) {
 
   .logoImage{
